--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Elastic Collection</title>
+    <title>Airtable Collection</title>
+    <script src="main.js"></script>
+    <script src="airtable.browser.js"></script>
   </head>
   <body>
     <h1>WenHsin's Airtable!</h1>
-    <script src="main.js"></script>
-    <script src="airtable.browser.js"></script>
   </body>
 </html>
