--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
     <title>Airtable Collection</title>
-    <script src="main.js"></script>
-    <script src="airtable.browser.js"></script>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <h1>WenHsin's Airtable!</h1>
+    <h1>What is the most embarrassing nickname you've ever had?</h1>
+    <input type="text" id="tt" placeholder="Enter Here">
+    <button onclick="my()">I won't laugh</button>
+    <p id="answer"></p>
+    <iframe class="airtable-embed" src="https://airtable.com/embed/shrP4OtfDH7a5BL2M?backgroundColor=orange&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+    <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
